# financial-ai-doc-intelligence

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-checks.yml
docs/: embedding_retrieval_comparison_plan.md  lesson_01.md  multi_doc_eval_checklist.md
examples/: multi_doc_rag_eval_cases.json  rag_eval_cases.json  sample_issuer_credit_note.md
examples/multi_doc/: city_utility_distractor.md  east_bay_peer.md  north_river_target.md
reports/: multi_doc_rag_eval_report.json  multi_doc_rag_eval_report.md  rag_eval_report.json  rag_eval_report.md  retrieval_comparison.md  sample_report.json  sample_report.md
src/finai_docintelligence/: __init__.py  analyzer.py  cli.py  evaluation.py  model.py  report.py  retrieval.py
tests/: test_analyzer.py  test_evaluation.py
