[project]
name = "financial-ai-doc-intelligence"
version = "0.1.0"
description = "A deterministic financial document intelligence baseline for credit analysis."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
finai-doc = "finai_docintelligence.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]

